[package]
name = "jserver"
authors = ["JupiterGao <tj.gaojie@outlook.com>"]
description = "A json api and static files server"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
env_logger = "0.10"
log = "0.4"
rayon = "1.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
